--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "firebase": "^9.17.1",
+    "jsonwebtoken": "^9.0.0",
+    "kursor": "^0.1.6",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-hook-form": "^7.42.1",
